[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heston-calibration"
version = "1.1.0"
description = "Reproducible Heston model calibration using Fourier pricing and numerical optimisation"
authors = [
    { name = "Muhammad Shoaib", email = "safridi@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "heston-model",
    "stochastic-volatility",
    "option-pricing",
    "quantitative-finance",
    "model-calibration",
    "fourier-pricing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "seaborn>=0.12",
    "ruff>=0.1",
]

[project.urls]
Repository = "https://github.com/drmshoaib/heston-model-calibration"

[tool.setuptools.packages.find]
where = ["."]
include = ["heston*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
